@@ -71,15 +71,6 @@ public:
 		}
 	}
 
-	/**
-	 * Performs a filtering operation with or on coord in "read-write" mode.
-	 * @param coord The Coordinate to which the filter is applied.
-	 */
-	virtual void filter_rw(geom::Coordinate * /*coord*/) const
-	{
-		// UniqueCoordinateArrayFilter is a read-only filter
-		assert(false); 
-	}
 };
 
 } // namespace geos::util
@@ -89,6 +80,9 @@ public:
 
 /**********************************************************************
  * $Log$
+ * Revision 1.4  2006/06/19 23:33:03  strk
+ * Don't *require* CoordinateFilters to define both read-only and read-write methods.
+ *
  * Revision 1.3  2006/06/12 10:10:39  strk
  * Fixed getGeometryN() to take size_t rather then int, changed unsigned int parameters to size_t.
  *
